
Changelog
=========

2018.5.0 (unreleased)
---------------------

- Correct width of subdossier table in dossier details pdf. [njohner]
- Disallow grouping tasks by the checkbox column in list views. [Rotonen]
- Add feature to generate a task listing pdf when resolving a dossier. [njohner]
- Set adhoc agendaitem filename to title without prefixing it. [njohner]
- Disallow dossier from template when adding businesscasedossier is disallowed. [njohner]
- Change wording for "Return Excerpt" from "zurücksenden" to "ablegen". [njohner]
- Add modification and creation date column to document listings. [njohner]
- Fix handling of unidirectional by reference tasks in a sequential process. [phgross]
- Disallow replacing the file on proposal documents with a non-.docx file. [Rotonen]
- Disallow removing the file from proposal documents. [Rotonen]


2018.4.2 (2018-08-30)
---------------------

- Make upgrade step 20180619143343 deferrable: Use of CMFEditions getHistory causes massive amounts of savepoints. [lgraf]
- Simplify agenda item titles for folder names for meeting zip exports. [Rotonen]
- Display native language of each language on proposal edit forms. [Rotonen]


2018.4.1 (2018-08-30)
---------------------

- Revoke roles for former responsible when reassigning a task. [phgross]
- Fix notification when removing a proposal from a meeting schedule. [njohner]
- Pin ftw.table to 1.20.0, to fix a concurrency bug in tables. [njohner]
- Fix issue when commenting on a not submitted proposal. [phgross]
- Fix IE bug on the notification settings page. [phgross]
- Fix sharing view on committecontainer. [phgross]
- Fix missing favorite-id on toggle-link if toggling favorite from repository-tree. [elioschmutz]
- Fix broken favorites state if toggling state in the repository-tree. [elioschmutz]
- Extend meeting zip-export with sort_order and gever_id. [phgross]


2018.4.0 (2018-08-20)
---------------------

- Fix dropdown JS registration. [phgross]