@@ -6,6 +6,7 @@ Changelog
 ---------------------
 
 - Correct width of subdossier table in dossier details pdf. [njohner]
+- Do not set document date during check-in or cancel. [njohner]
 - Disallow grouping tasks by the checkbox column in list views. [Rotonen]
 - Add feature to generate a task listing pdf when resolving a dossier. [njohner]
 - Set adhoc agendaitem filename to title without prefixing it. [njohner]
